#8984 button for creating a launch for SuperDevMode code server (enabled if CodeServer class is on project classpath)
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@23984 de684a11-831f-0410-ab27-cb86445eb682